--- a/customize.html
+++ b/customize.html
@@ -690,10 +690,10 @@
             </div>
             <nav>
                 <ul class="nav-links">
-            <li><a href="loader.html?redirect=index.html">Home</a></li>
-            <li><a href="loader.html?redirect=home.html"  class="active">Customize</a></li>
-            <li><a href="loader.html?redirect=saved-designs.html">Saved Designs</a></li>
-            <li><a href="loader.html?redirect=https://tremblaysound.com/">Tremblay</a></li>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="home.html"  class="active">Customize</a></li>
+            <li><a href="saved-designs.html">Saved Designs</a></li>
+            <li><a href="https://tremblaysound.com/">Tremblay</a></li>
                 </ul>
             </nav>
             <div class="mobile-menu">
@@ -711,10 +711,10 @@
             </button>
         </div>
         <ul class="sidebar-links">
-            <li><a href="loader.html?redirect=index.html">Home</a></li>
-            <li><a href="loader.html?redirect=home.html"  class="active">Customize</a></li>
-            <li><a href="loader.html?redirect=saved-designs.html">Saved Designs</a></li>
-            <li><a href="loader.html?redirect=https://tremblaysound.com/">Tremblay</a></li>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="home.html"  class="active">Customize</a></li>
+            <li><a href="saved-designs.html">Saved Designs</a></li>
+            <li><a href="https://tremblaysound.com/">Tremblay</a></li>
         </ul>
     </div>
     <div class="overlay"></div>
@@ -1266,6 +1266,7 @@
             return Math.atan2(dy, dx) * 180 / Math.PI;
         }
     </script>
+        <script src="loader.js"></script>
 </body>
 
 </html>
