--- a/saved-designs.html
+++ b/saved-designs.html
@@ -6,6 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Tremblay Sound - Saved Designs</title>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+        
         <style>
             * {
                 margin: 0;
@@ -655,10 +656,10 @@
                 </div>
                 <nav>
                     <ul class="nav-links">
-            <li><a href="loader.html?redirect=index.html">Home</a></li>
-            <li><a href="loader.html?redirect=home.html">Customize</a></li>
-            <li><a href="loader.html?redirect=saved-designs.html"   class="active">Saved Designs</a></li>
-            <li><a href="loader.html?redirect=https://tremblaysound.com/">Tremblay</a></li>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="home.html">Customize</a></li>
+            <li><a href="saved-designs.html"   class="active">Saved Designs</a></li>
+            <li><a href="https://tremblaysound.com/">Tremblay</a></li>
                     </ul>
                 </nav>
                 <div class="mobile-menu">
@@ -676,10 +677,10 @@
                 </button>
             </div>
             <ul class="sidebar-links">
-            <li><a href="loader.html?redirect=index.html">Home</a></li>
-            <li><a href="loader.html?redirect=home.html">Customize</a></li>
-            <li><a href="loader.html?redirect=saved-designs.html"   class="active">Saved Designs</a></li>
-            <li><a href="loader.html?redirect=https://tremblaysound.com/">Tremblay</a></li>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="home.html">Customize</a></li>
+            <li><a href="saved-designs.html"   class="active">Saved Designs</a></li>
+            <li><a href="https://tremblaysound.com/">Tremblay</a></li>
             </ul>
         </div>
         <div class="overlay"></div>
@@ -893,6 +894,7 @@
                 }
             }
         </script>
+            <script src="loader.js"></script>
     </body>
 
     </html>
